nodejs/versioned_docs/version-1.10.0/api/class-electronapplication.mdx
---
id: class-electronapplication
title: "ElectronApplication"
---
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

Electron application representation. You can use [electron.launch([options])](./api/class-electron.mdx#electronlaunchoptions) to obtain the application instance. This instance you can control main electron process as well as work with Electron windows:

```js
const { _electron: electron } = require('playwright');

(async () => {
  // Launch Electron app.
  const electronApp = await electron.launch({ args: ['main.js'] });

  // Evaluation expression in the Electron context.
  const appPath = await electronApp.evaluate(async ({ app }) => {
    // This runs in the main Electron process, parameter here is always
    // the result of the require('electron') in the main app script.
    return app.getAppPath();
  });
  console.log(appPath);

  // Get the first window that the app opens, wait if necessary.
  const window = await electronApp.firstWindow();
  // Print the title.
  console.log(await window.title());
  // Capture a screenshot.
  await window.screenshot({ path: 'intro.png' });
  // Direct Electron console to Node terminal.
  window.on('console', console.log);
  // Click button.
  await window.click('text=Click me');
  // Exit app.
  await electronApp.close();
})();
```


- [electronApplication.on('close')](./api/class-electronapplication.mdx#electronapplicationonclose)
- [electronApplication.on('window')](./api/class-electronapplication.mdx#electronapplicationonwindow)
- [electronApplication.close()](./api/class-electronapplication.mdx#electronapplicationclose)
- [electronApplication.context()](./api/class-electronapplication.mdx#electronapplicationcontext)
- [electronApplication.evaluate(pageFunction[, arg])](./api/class-electronapplication.mdx#electronapplicationevaluatepagefunction-arg)
- [electronApplication.evaluateHandle(pageFunction, arg)](./api/class-electronapplication.mdx#electronapplicationevaluatehandlepagefunction-arg)
- [electronApplication.firstWindow()](./api/class-electronapplication.mdx#electronapplicationfirstwindow)
- [electronApplication.waitForEvent(event[, optionsOrPredicate])](./api/class-electronapplication.mdx#electronapplicationwaitforeventevent-optionsorpredicate)
- [electronApplication.windows()](./api/class-electronapplication.mdx#electronapplicationwindows)

## electronApplication.on('close')

This event is issued when the application closes.

## electronApplication.on('window')
- type: <[Page]>

This event is issued for every window that is created **and loaded** in Electron. It contains a [Page] that can be used for Playwright automation.

## electronApplication.close()

Closes Electron application.

## electronApplication.context()
- returns: <[BrowserContext]>

This method returns browser context that can be used for setting up context-wide routing, etc.

## electronApplication.evaluate(pageFunction[, arg])
- `pageFunction` <[function]|[Electron]> Function to be evaluated in the worker context.
- `arg` <[EvaluationArgument]> Optional argument to pass to `pageFunction`.
- returns: <[Promise]<[Serializable]>>

Returns the return value of `pageFunction`.

If the function passed to the [electronApplication.evaluate(pageFunction[, arg])](./api/class-electronapplication.mdx#electronapplicationevaluatepagefunction-arg) returns a [Promise], then [electronApplication.evaluate(pageFunction[, arg])](./api/class-electronapplication.mdx#electronapplicationevaluatepagefunction-arg) would wait for the promise to resolve and return its value.

If the function passed to the [electronApplication.evaluate(pageFunction[, arg])](./api/class-electronapplication.mdx#electronapplicationevaluatepagefunction-arg) returns a non-[Serializable] value, then [electronApplication.evaluate(pageFunction[, arg])](./api/class-electronapplication.mdx#electronapplicationevaluatepagefunction-arg) returns `undefined`. Playwright also supports transferring some additional values that are not serializable by `JSON`: `-0`, `NaN`, `Infinity`, `-Infinity`.

## electronApplication.evaluateHandle(pageFunction, arg)
- `pageFunction` <[function]|[Electron]> Function to be evaluated in the worker context.
- `arg` <[EvaluationArgument]>
- returns: <[Promise]<[JSHandle]>>

Returns the return value of `pageFunction` as a [JSHandle].

The only difference between [electronApplication.evaluate(pageFunction[, arg])](./api/class-electronapplication.mdx#electronapplicationevaluatepagefunction-arg) and [electronApplication.evaluateHandle(pageFunction, arg)](./api/class-electronapplication.mdx#electronapplicationevaluatehandlepagefunction-arg) is that [electronApplication.evaluateHandle(pageFunction, arg)](./api/class-electronapplication.mdx#electronapplicationevaluatehandlepagefunction-arg) returns [JSHandle].

If the function passed to the [electronApplication.evaluateHandle(pageFunction, arg)](./api/class-electronapplication.mdx#electronapplicationevaluatehandlepagefunction-arg) returns a [Promise], then [electronApplication.evaluateHandle(pageFunction, arg)](./api/class-electronapplication.mdx#electronapplicationevaluatehandlepagefunction-arg) would wait for the promise to resolve and return its value.

## electronApplication.firstWindow()
- returns: <[Promise]<[Page]>>

Convenience method that waits for the first application window to be opened. Typically your script will start with:

```js
  const electronApp = await electron.launch({
    args: ['main.js']
  });
  const window = await electronApp.firstWindow();
  // ...
```

## electronApplication.waitForEvent(event[, optionsOrPredicate])
- `event` <[string]> Event name, same one typically passed into `*.on(event)`.
- `optionsOrPredicate` <[function]|[Object]> Either a predicate that receives an event or an options object. Optional.
  - `predicate` <[function]> receives the event data and resolves to truthy value when the waiting should resolve.
  - `timeout` <[number]> maximum time to wait for in milliseconds. Defaults to `30000` (30 seconds). Pass `0` to disable timeout. The default value can be changed by using the [browserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browsercontextsetdefaulttimeouttimeout).
- returns: <[Promise]<[Object]>>

Waits for event to fire and passes its value into the predicate function. Returns when the predicate returns truthy value. Will throw an error if the application is closed before the event is fired. Returns the event data value.

```js
const [window] = await Promise.all([
  electronApp.waitForEvent('window'),
  mainWindow.click('button')
]);
```

## electronApplication.windows()
- returns: <[Array]<[Page]>>

Convenience method that returns all the opened windows.

[Accessibility]: ./api/class-accessibility.mdx "Accessibility"
[Android]: ./api/class-android.mdx "Android"
[AndroidDevice]: ./api/class-androiddevice.mdx "AndroidDevice"
[AndroidInput]: ./api/class-androidinput.mdx "AndroidInput"
[AndroidSocket]: ./api/class-androidsocket.mdx "AndroidSocket"
[AndroidWebView]: ./api/class-androidwebview.mdx "AndroidWebView"
[Browser]: ./api/class-browser.mdx "Browser"
[BrowserContext]: ./api/class-browsercontext.mdx "BrowserContext"
[BrowserServer]: ./api/class-browserserver.mdx "BrowserServer"
[BrowserType]: ./api/class-browsertype.mdx "BrowserType"
[CDPSession]: ./api/class-cdpsession.mdx "CDPSession"
[ChromiumBrowser]: ./api/class-chromiumbrowser.mdx "ChromiumBrowser"
[ChromiumBrowserContext]: ./api/class-chromiumbrowsercontext.mdx "ChromiumBrowserContext"
[ChromiumCoverage]: ./api/class-chromiumcoverage.mdx "ChromiumCoverage"
[ConsoleMessage]: ./api/class-consolemessage.mdx "ConsoleMessage"
[Dialog]: ./api/class-dialog.mdx "Dialog"
[Download]: ./api/class-download.mdx "Download"
[Electron]: ./api/class-electron.mdx "Electron"
[ElectronApplication]: ./api/class-electronapplication.mdx "ElectronApplication"
[ElementHandle]: ./api/class-elementhandle.mdx "ElementHandle"
[FileChooser]: ./api/class-filechooser.mdx "FileChooser"
[FirefoxBrowser]: ./api/class-firefoxbrowser.mdx "FirefoxBrowser"
[Frame]: ./api/class-frame.mdx "Frame"
[JSHandle]: ./api/class-jshandle.mdx "JSHandle"
[Keyboard]: ./api/class-keyboard.mdx "Keyboard"
[Logger]: ./api/class-logger.mdx "Logger"
[Mouse]: ./api/class-mouse.mdx "Mouse"
[Page]: ./api/class-page.mdx "Page"
[Playwright]: ./api/class-playwright.mdx "Playwright"
[Request]: ./api/class-request.mdx "Request"
[Response]: ./api/class-response.mdx "Response"
[Route]: ./api/class-route.mdx "Route"
[Selectors]: ./api/class-selectors.mdx "Selectors"
[TimeoutError]: ./api/class-timeouterror.mdx "TimeoutError"
[Touchscreen]: ./api/class-touchscreen.mdx "Touchscreen"
[Video]: ./api/class-video.mdx "Video"
[WebKitBrowser]: ./api/class-webkitbrowser.mdx "WebKitBrowser"
[WebSocket]: ./api/class-websocket.mdx "WebSocket"
[Worker]: ./api/class-worker.mdx "Worker"
[Element]: https://developer.mozilla.org/en-US/docs/Web/API/element "Element"
[Evaluation Argument]: ./core-concepts.mdx#evaluationargument "Evaluation Argument"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[iterator]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Iteration_protocols "Iterator"
[origin]: https://developer.mozilla.org/en-US/docs/Glossary/Origin "Origin"
[selector]: https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Selectors "selector"
[Serializable]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON/stringify#Description "Serializable"
[UIEvent.detail]: https://developer.mozilla.org/en-US/docs/Web/API/UIEvent/detail "UIEvent.detail"
[UnixTime]: https://en.wikipedia.org/wiki/Unix_time "Unix Time"
[xpath]: https://developer.mozilla.org/en-US/docs/Web/XPath "xpath"

[Array]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array "Array"
[boolean]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#Boolean_type "Boolean"
[Buffer]: https://nodejs.org/api/buffer.html#buffer_class_buffer "Buffer"
[ChildProcess]: https://nodejs.org/api/child_process.html "ChildProcess"
[Error]: https://nodejs.org/api/errors.html#errors_class_error "Error"
[EventEmitter]: https://nodejs.org/api/events.html#events_class_eventemitter "EventEmitter"
[function]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Function "Function"
[Map]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Map "Map"
[null]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/null "null"
[number]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#Number_type "Number"
[Object]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Object "Object"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[Readable]: https://nodejs.org/api/stream.html#stream_class_stream_readable "Readable"
[RegExp]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/RegExp "RegExp"
[string]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#String_type "string"
[URL]: https://nodejs.org/api/url.html "URL"